tests/success/one_houndred.tig
let
	var p:= 10
	function f(n : int) : int = n*p
in
	printi(f(p))
end