tests/fail/procedure_same_parameters_name.tig
let
    function f(a: int, a: string, b: int, b: string) = ()
in
end
